<resources>
    <string name="app_name">Red Carpet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="phoneNumberText">Phone number</string>
    <string name="verificationCodeText">Verification code</string>
    <string name="beginAuthenticationText">Send Code</string>
    <string name="verifyCodeText">Verify Code</string>
    <string name="resendCodeText">Resend Code</string>
    <string name="nickname">Nickname</string>
    <string name="location">Location</string>
    <string name="partyName">Party Name</string>
    <string name="partyLocation">Party Location</string>
    <string name="partyStartTime">Start Time</string>
    <string name="partyEndTime">End Time</string>
    <string name="partyDetails">Details</string>



</resources>
