<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="STRINGA1"
            android:src="@drawable/start_page_image" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="stringA2" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/status"
            android:text="STATUS" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/detail"
            tools:text="Firebase User ID: 123456789abc" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayoutPhoneNumber"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:hint="@string/phoneNumberText"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/field_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayoutVerification"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1.0"
                    android:layout_width="0dp"
                    android:hint="@string/verificationCodeText"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/md_white_1000"
                    android:background="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/beginAuthenticationText"/>

                <Button
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/md_white_1000"
                    android:background="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verifyCodeText"/>

                <Button
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/md_white_1000"
                    android:background="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resendCodeText"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:gravity="center"
            android:weightSum="1.0">

            <Button
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:layout_weight="1.0"
                android:textColor="@color/md_white_1000"
                android:text="Continue"/>

            <Button
                android:id="@+id/sign_out_button"
                android:textColor="@color/md_white_1000"
                android:background="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="Logout"/>




        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
